2000-07-10  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-handle-im-in): now removing an event from the ring
	when the buffer is visible -- if the user made the IM buffer
	visible in a way other than "C-x t a" (for example, with "C-x b"),
	then the persistent "message available" message is annoying.
	(tnt-send-text-as-instant-message): remove event from ring if you
	say something too (not just the other person).
	(tnt-next-event): now tells user if there are no events.
	(tnt-prev-event): now tells user if there are no events.
	(tnt-remove-im-event): simplified a little.  also, put
	toc-normalize in here, rather than requiring it to always be
	called by the calling function.
	(tnt-im): now does not call toc-normalize, since it will be done
	in remove-im-event.
	(tnt-directory): added.
	(tnt-buddy-list-backup-filename): removed the leading ".tnt-",
	since it's now in a directory.
	(tnt-restore-buddy-list): now using "~/.tnt/username-buddies" for
	backup, rather than "~/.tnt-username-buddies".  though there's
	still no backup functionality, only restore.

2000-06-28  Jim Whitehead  <jnwhiteh@brokendreams.net>

	* tnt.el (tnt-remove-im-event): Added this function to take care
	of removing an im event from the event ring.
	* tnt.el (tnt-im): Added a call to tnt-remove-im-event to clear
	any pending im's from that user from the event-ring.  Makes things
	a little cleaner
	
2000-06-08  Jim Whitehead  <jnwhiteh@mailbox.syr.edu>

	* tocstr.el: Integrated the patch into tocstr.el.  Used the 
	tnt-timers-available functionality to save compatability.  The
	"enhancements" will be available in all versions of emacs containing
	the run-at-time procedure.
	(tnt-handle-nick): Added a small hack here to set the tnt-current-user
	to tnt-username instead of what the server supposedly sends back to us.

2000-06-01  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-handle-nick): if we're supposed to be forwarding to